# bison-themes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
theme-template/: __init__.py  config.py  parse.py
themes/arknights-theme/: __init__.py  parse.py
themes/basic-theme/: __init__.py  config.py  parse.py
themes/brief-theme/: __init__.py  parse.py
themes/ceobecanteen-theme/: __init__.py  parse.py
themes/ht2i-theme/: __init__.py  config.py  parse.py
